# zephyr-application

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.za  LICENSE  README.md  west.yml
boards/arm/mimx8mp_debix/: Kconfig.board  Kconfig.defconfig  mimx8mp_debix_ddr.dts  mimx8mp_debix_ddr.yaml  mimx8mp_debix_ddr_defconfig  mimx8mp_debix_itcm.dts  mimx8mp_debix_itcm.yaml  mimx8mp_debix_itcm_defconfig
boards/arm/pico_pi_m4/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  pico_pi_m4.dts  pico_pi_m4.yaml  pico_pi_m4_defconfig
boards/arm/stm32f4_disco_mikroe/: Kconfig.board  Kconfig.defconfig  pinmux.c  (+3 more)
cmake/: boilerplate.cmake
drivers/sensor/: CMakeLists.txt  Kconfig
gpio_imx/src/: main.c
lib/: CMakeLists.txt  Kconfig
samples/blinky/: CMakeLists.txt  disco_l475_iot1.overlay  warp7_m4.overlay
samples/button_led/: CMakeLists.txt  warp7_m4.overlay
samples/cdc_uart_led/: CMakeLists.txt  prj.conf
samples/lm75a/: CMakeLists.txt  frdm_k64f.overlay  prj.conf  prj_warp7_m4.conf  warp7_m4.overlay
samples/openamp_rsc_table/: README.rst  prj.conf
samples/qt_project/: CMakeLists.txt  prj.conf  stm32f4_disco.overlay
samples/smart_greenhouse/: CMakeLists.txt  prj_stm32f4_disco_mikroe.conf  stm32f4_disco_mikroe.overlay
samples/update/: CMakeLists.txt  prj.conf
samples/update/src/: main.c
samples/weather_station/: CMakeLists.txt  prj_stm32f4_disco.conf  prj_stm32f4_disco_mikroe.conf  stm32f4_disco.overlay
samples/websocket_sensor/: CMakeLists.txt  prj.conf
samples/wheater_station/: CMakeLists.txt  prj.conf  stm32f4_disco_mikroe.overlay
zephyr/: module.yml
(+24 files in other folders)
